--- a/index.css
+++ b/index.css
@@ -26,9 +26,8 @@ body {
 
 #header h1 {
     color: white;
-    font-size: 2em;
-    text-shadow: 1px 2px 4px #000000;
-    font-weight: lighter;
+    font-size: 2.5em;
+
 }
 
 section p {
@@ -46,7 +45,7 @@ footer ul li {
 }
 
 #header #header-content {
-    padding: 1em;
+    padding: 0.5em;
 }
 #navbar ul li {
     display: inline-block;
@@ -75,7 +74,7 @@ footer #footer-content {
     color: black;
 }
 
-#footer-content li div p:hover {
+#footer-content li div a:hover {
     font-weight: bold;
 }
 
@@ -90,7 +89,7 @@ footer #footer-content {
 }
 
 #navbar #nav div:hover {
-    background-color: #546270;
+    background-color: #0e4e6c;
 }
 
 #navbar #nav div {
@@ -100,12 +99,12 @@ footer #footer-content {
 #navbar {
     display: flex;
     flex-direction: row;
-    background-color: #718ea6;
+    background-color: #1b99d5;
 }
 
 body .sub img {
     max-width: 20%;
-    padding: 2em 1em 2em 1em;
+    padding: 2em 3em 2em 3em;
 }
 body .sub p {
     padding: 2em 1em 2em 1em;
@@ -137,6 +136,22 @@ body .sub {
     border-color: #bdbdbd;
 }
 
+body .sub span {
+    font-weight: bold;
+}
+
 body .left {
     background-color: gray;
+}
+
+footer p a {
+    color: #1b99d5;
+}
+
+footer p a:hover {
+    font-weight: bold;
+}
+
+footer #footer-content p {
+    text-align: center;
 }
